--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ releases/resume-tienla.pdf
 .~lock.resume-tienla-public.odt#
 ~$sume-tienla-public.odt
 *.tmp
+coverletter-tienla.docx
+releases/coverletter-tienla.pdf
